[package]
name = "file_utility"
version = "0.1.2"
edition = "2018"
authors = ["Ben Lovy <ben@deciduously.com>"]
description = "API for working with tabletop RPG entities."
documentation = "https://deciduously.github.io/file_utility/"
homepage = "https://deciduously.github.io/file_utility/"
include = ["**/*.rs", "Cargo.toml"]
keywords = ["tui"]
license = "BSD-3-Clause"
readme = "README.md"
repository = "https://github.com/deciduously/file_utility"

[dependencies]

anyhow = "1"
libc = "0.2"
tui = "0.15"
termion = "1.5"
unicode-width = "0.1"

[dev-dependencies]

pretty_assertions = "0.7"